<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Previsao do Tempo</string>
<string name="widget_name">Previsao do Tempo</string>
<string name="city">Cidade</string>
<string name="condition">Condição</string>
<string name="lastUpdate">Última Atualização</string>
<string name="ok">OK</string>
<string name="nextDays">Próximos Dias</string>
<string name="refresh">Atualizar</string>
<string name="location">Localização</string>
<string name="exit">Sair</string>
<string name="enterCity">Informe a Cidade</string>
<string name="processMsg">Processando</string>
<string name="locationErrorMsg">Localização Indisponível</string>
<string name="internetErrorMsg">Verifique a Conexão de Internet</string>
<string name="forecastNotFound">Previsão do Tempo não Encontrada</string>
<string name="wind">Vento</string>
<string name="humidity">Umidade</string>
<string name="rain">Chuva</string>
<string name="icon">Ícone</string>
<string name="initialTemp">0 ºC</string>
<string name="unknown">Desconhecido</string>
</resources>
