<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
   	android:orientation="vertical"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:background="@drawable/bkg">
      		
   	<EditText 
      	android:id="@+id/edit_input"
      	android:layout_toLeftOf="@+id/cmd_submit"
      	android:layout_height="wrap_content"
	    android:hint="@string/city" android:inputType="text" 
	    android:layout_width="fill_parent"/>
 	<ImageButton 
 		android:id="@+id/cmd_submit"
	   	android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
	    android:text="@string/ok"
	    android:layout_alignParentRight="true"
	    android:src="@drawable/ic_action_search"
	    android:contentDescription="@string/ok"
	    style="?android:attr/borderlessButtonStyle"/>
	    <ScrollView
   		android:id="@+id/scroll"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_below="@+id/edit_input">
			<TableLayout 
				android:orientation="horizontal" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				<TableRow
					android:gravity="center_horizontal|center_vertical">
			      	<ImageView
			      			android:id="@+id/imgWeather"
			      			android:src="@drawable/icon"
			      			android:layout_width="wrap_content" 
			      			android:layout_height="wrap_content"
			      			android:contentDescription="@string/icon"/>
			      	<TableLayout>
				 		<TextView 
				 				android:id="@+id/weather_today_temp"
					      		android:layout_height="wrap_content"
					      		android:layout_width="wrap_content"
					      		android:text="@string/initialTemp" android:textSize="25dip" android:textColor="#FFFFFF" android:textStyle="bold"/>
					    <TextView 
				 				android:id="@+id/weather_today_city"
					      		android:layout_height="wrap_content"
					      		android:layout_width="wrap_content"
					      		android:text="@string/city"/>
					    <TextView 
				 				android:id="@+id/weather_today_condition"
					      		android:layout_height="wrap_content"
					      		android:layout_width="wrap_content"
					      		android:text="@string/condition"/>
				     </TableLayout>
				</TableRow>
			<TextView
				android:id="@+id/lblProximosDias"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text=""/>
    		<br.com.android.weatherforecast.views.WeatherLine 
    			android:id="@+id/weather_1" 
        		android:layout_width="wrap_content" 
	      		android:layout_height="wrap_content"
	      		android:gravity="center_vertical"/>
     		<br.com.android.weatherforecast.views.WeatherLine 
     			android:id="@+id/weather_2" 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:gravity="center_vertical"/>
        	<br.com.android.weatherforecast.views.WeatherLine 
     			android:id="@+id/weather_3" 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content"
        		android:gravity="center_vertical"/>
		</TableLayout>
	</ScrollView>
	<TextView 
				android:id="@+id/lblAtualizacao"
				android:layout_alignParentBottom="true"
				android:layout_centerHorizontal="true"
		 		android:layout_height="wrap_content" 
		 		android:layout_width="wrap_content" 
		 		android:text="@string/lastUpdate"/>
	<ProgressBar
    android:id="@+id/progress"
    style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:visibility="gone" />
</RelativeLayout>